--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "nunchaku"
+name = "nunchaku_nodes"
 description = "Nunchaku ComfyUI Node. Nunchaku is the inference that supports SVDQuant. SVDQuant is a new post-training training quantization paradigm for diffusion models, which quantize both the weights and activations of FLUX.1 to 4 bits, achieving 3.5× memory and 8.7× latency reduction on a 16GB laptop 4090 GPU. See more details: https://github.com/mit-han-lab/nunchaku"
 version = "0.1.6"
 license = { file = "LICENSE.txt" }
@@ -12,5 +12,5 @@ Repository = "https://github.com/mit-han-lab/ComfyUI-nunchaku"
 
 [tool.comfy]
 PublisherId = "lmxyy1999"
-DisplayName = "nunchaku"
+DisplayName = "Nunchaku"
 #Icon = "https://raw.githubusercontent.com/mit-han-lab/nunchaku/bfd9aa3ae84f51a26414f1600d725a0098472820/assets/logo.svg"
