--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,5 @@ Repository = "https://github.com/mit-han-lab/ComfyUI-nunchaku"
 
 [tool.comfy]
 PublisherId = "lmxyy1999"
-DisplayName = "Nunchaku"
+DisplayName = "ComfyUI-nunchaku"
 Icon = "https://raw.githubusercontent.com/mit-han-lab/nunchaku/96615bd93a1f0d2cf98039fddecfec43ce34cc96/assets/nunchaku.svg"
