Make ruff to ignore F401
F401 is too verbose for our purpose here.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,10 @@ license = { file = "LICENSE.txt" }
 dependencies = []
 requires-python = ">=3.10, <3.13"
 
+[tool.ruff.lint]
+select = ["E", "W", "F"]
+ignore = ["F401"] 
+
 [project.urls]
 Repository = "https://github.com/mit-han-lab/ComfyUI-nunchaku"
 #  Used by Comfy Registry https://comfyregistry.org
