--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ license = { file = "LICENSE.txt" }
 dependencies = []
 requires-python = ">=3.10, <3.13"
 
+[tool.ruff]
+line-length = 140
+
 [tool.ruff.lint]
 select = ["E", "W", "F"]
 ignore = ["F401"] 
