chore: add tests for ComfyUI-nunchaku (#191)
* fix: fix the test ci

* multiple y

* need to install manager

* create folders when downloading models

* fix: fix a typo when downloading test data

* fix the paths

* add more debugging info

* debugging tests

* add the dependencies for PuLID

* add the dependencies for PuLID

* start the tests

* start the tests

--- a/.github/workflows/test_ampere.yaml
+++ b/.github/workflows/test_ampere.yaml
@@ -1,4 +1,4 @@
-name: test_blackwell
+name: test_ampere
 
 on:
   workflow_dispatch:
@@ -44,7 +44,7 @@ concurrency:
 jobs:
   check-comment:
     if: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'issue_comment' && github.event.issue.pull_request && !github.event.pull_request.draft) }}
-    runs-on: [ self-hosted, blackwell ]
+    runs-on: [ self-hosted, ampere ]
     outputs:
       should_run: ${{ steps.check.outputs.should_run }}
     steps:
@@ -59,7 +59,7 @@ jobs:
           fi
 
   run-tests:
-    runs-on: [ self-hosted, blackwell ]
+    runs-on: [ self-hosted, ampere ]
     needs: [ check-comment ]
     if: ${{ github.event_name != 'issue_comment' || needs.check-comment.outputs.should_run == 'true' }}
     steps:
@@ -125,8 +125,8 @@ jobs:
           yes | comfy --here install --nvidia --skip-torch-or-directml --version 0.3.34
           cd ComfyUI
           rm -r models
-          mkdir -p ${{ secrets.COMFYUI_MODELS_ROOT_BLACKWELL }}
-          ln -s ${{ secrets.COMFYUI_MODELS_ROOT_BLACKWELL }} models
+          mkdir -p ${{ secrets.COMFYUI_MODELS_ROOT_AMPERE }}
+          ln -s ${{ secrets.COMFYUI_MODELS_ROOT_AMPERE }} models
           cp -r ../ComfyUI-nunchaku/tests nunchaku_tests
           pip install -r nunchaku_tests/requirements.txt
           cd custom_nodes
@@ -151,7 +151,7 @@ jobs:
   clean-up:
     if: always() && (github.event_name != 'issue_comment' || needs.check-comment.outputs.should_run == 'true')
     needs: [ run-tests ]
-    runs-on: [ self-hosted, blackwell ]
+    runs-on: [ self-hosted, ampere ]
 
     steps:
       - name: Clean up
