--- a/test_data/models.yaml
+++ b/test_data/models.yaml
@@ -58,3 +58,12 @@ models:
     filename: "svdq-{precision}_r32-shuttle-jaguar.safetensors"
     sub_folder: "diffusion_models"
     new_filename: null
+  # pulid related
+  - repo_id: "guozinan/PuLID"
+    filename: "pulid_flux_v0.9.1.safetensors"
+    sub_folder: "pulid"
+    new_filename: null
+  - repo_id: "QuanSun/EVA-CLIP"
+    filename: "EVA02_CLIP_L_336_psz14_s6B.pt"
+    sub_folder: "clip"
+    new_filename: null
