chore: fix the build-docs workflow

--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -67,6 +67,7 @@ jobs:
         env:
           RSYNC_RSH: "ssh -o StrictHostKeyChecking=no -i id_rsa"
       - name: Clean up
+        if: always()
         run: |
           cd ..
           rm -rf *nunchaku* *ComfyUI*
