--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -55,6 +55,15 @@ jobs:
           cd custom_nodes
           ln -s ../../ComfyUI-nunchaku
           pip install -r ComfyUI-nunchaku/requirements.txt
+      - name: Build docs
+        run: |
+          source $(conda info --base)/etc/profile.d/conda.sh
+          conda activate nunchaku-docs || { echo "Failed to activate conda env"; exit 1; }
+          which python
+          pip install sphinx sphinx-tabs myst-parser sphinx-copybutton breathe sphinxcontrib-mermaid nbsphinx jupyter ipykernel graphviz sphinxext-rediraffe
+          pip install furo sphinxawesome-theme sphinx-book-theme sphinx-rtd-theme
+          cd docs
+          make html
       - name: Deploy docs
         run: |
           echo "${{ secrets.DO_SSH_KEY }}" > ./id_rsa
