chore: fix the build-docs workflow

--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -79,4 +79,5 @@ jobs:
         if: always()
         run: |
           cd ..
-          rm -rf *nunchaku* *ComfyUI*
+          rm -rf nunchaku ComfyUI
+          rm comfyui_nunchaku
