--- a/.github/workflows/pr-test.yaml
+++ b/.github/workflows/pr-test.yaml
@@ -54,6 +54,7 @@ jobs:
           which python
           echo "Setting up Python with Conda"
           conda create -n test_env python=3.12 -y
+          readlink -f ~/workspace/comfyui_models
       - name: Install Nunchaku
         run: |
           source $(conda info --base)/etc/profile.d/conda.sh
@@ -62,7 +63,7 @@ jobs:
           conda install -c conda-forge gxx=11 gcc=11
           echo "Installing dependencies"
           pip install torch==2.7 torchvision==0.22 torchaudio==2.7 --index-url https://download.pytorch.org/whl/cu128
-          pip install ninja wheel diffusers==0.33.1 transformers==4.51 accelerate==1.7 sentencepiece==0.2 protobuf==6.31 huggingface_hub==0.31
+          pip install ninja wheel diffusers==0.34 transformers==4.51 accelerate==1.7 sentencepiece==0.2 protobuf==6.31 huggingface_hub==0.31
           pwd
           cd ..
           rm -rf nunchaku
@@ -103,8 +104,6 @@ jobs:
           conda activate test_env || { echo "Failed to activate conda env"; exit 1; }
           pwd
           cd ../ComfyUI
-          pwd
-          python nunchaku_tests/scripts/nunchaku-flux1-dev.py
           pytest -v nunchaku_tests/
       - name: clean up
         if: always()
