feat: Qwen-Image support (#463)
* update

* add qwen-image models

* override comfyui class for nunchaku

* update

* finished model loading

* style: make linter happy

* update

* start debugging

* style: make linter happy

* fix the init error

* model loading done

* need to figure out why the precision does not match in comfyui

* almost done

* add the example workflow

* style: make linter happy

* add some docs

* runnable on 5090

* leave the docs to tomorrow

* update dependencies

* style: make linter happy

* add the docstring

* update the workflow docs

* use 0.3.44 for tests

* add more api docs

* add the v1.0.0 info

* update requirements

* style: make linter happy

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-diffusers>=0.34
+diffusers>=0.35
 accelerate
 sentencepiece
 protobuf
-huggingface_hub
+huggingface_hub>=0.34
 tomli
-peft>=0.15
+peft>=0.17
+accelerate>=1.10
 
 # PuLID dependencies
 insightface
