--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -2,15 +2,19 @@ name: Build Docs
 on:
   schedule:
     - cron: '30 7 * * *' # UTC time
-  repository_dispatch:
-    types: [build-docs]
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Docs version (default: nightly)'
+        required: false
+        default: 'nightly'
 jobs:
   build-and-deploy-docs:
     name: Build and deploy docs
     runs-on: [self-hosted, '4090']
-    if: github.event_name != 'repository_dispatch' || github.actor == 'lmxyy'
+    if: github.event_name != 'workflow_dispatch' || github.actor == 'lmxyy'
     env:
-      DOC_VERSION: ${{ github.event.client_payload.version || 'nightly' }}
+      DOC_VERSION: ${{ github.event.inputs.version || 'nightly' }}
     steps:
       - name: Checkout dev branch
         uses: actions/checkout@v4
