chore: fix the test ci (#637)
* use conda cpp

* rename download test data to download inputs

* style: make linter happy

--- a/.github/workflows/pr-test.yaml
+++ b/.github/workflows/pr-test.yaml
@@ -58,6 +58,7 @@ jobs:
           source $(conda info --base)/etc/profile.d/conda.sh
           conda activate test_env || { echo "Failed to activate conda env"; exit 1; }
           which python
+          conda install -c conda-forge gxx=11 gcc=11
           rm -rf nunchaku
           git clone --recurse-submodules https://github.com/nunchaku-tech/nunchaku.git
           cd nunchaku
@@ -93,7 +94,7 @@ jobs:
           cd ..
           python custom_nodes/ComfyUI-nunchaku/scripts/download_models.py
           mkdir -p input
-          python custom_nodes/ComfyUI-nunchaku/scripts/download_test_data.py
+          python custom_nodes/ComfyUI-nunchaku/scripts/download_inputs.py
       - name: Run tests
         run: |
           source $(conda info --base)/etc/profile.d/conda.sh
