fix: QwenImage with RES4LYF sampler (#600)
* try to fix issue #549

* align device with offload option

* offload transformer blocks while not affecting model device

* style: make linter happy

* add test

* style: make linter happy

* no need to redownload the qwen-image files

* style: make linter happy

* resolve missing sub_folder item in yaml

* update

* rename the workflow

* style: make linter happy

--- a/test_data/models.yaml
+++ b/test_data/models.yaml
@@ -86,6 +86,10 @@ models:
     filename: "svdq-{precision}_r128-qwen-image-edit-2509.safetensors"
     sub_folder: "diffusion_models"
     new_filename: null
+  - repo_id: "nunchaku-tech/nunchaku-qwen-image"
+    filename: "svdq-{precision}_r128-qwen-image-lightningv1.1-8steps.safetensors"
+    sub_folder: "diffusion_models"
+    new_filename: null
   # pulid related
   - repo_id: "guozinan/PuLID"
     filename: "pulid_flux_v0.9.1.safetensors"
