chore: update the build-docs workflow

--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -71,5 +71,4 @@ jobs:
         if: always()
         run: |
           cd ..
-          rm -rf nunchaku ComfyUI
-          rm comfyui_nunchaku
+          rm -rf nunchaku
