chore: wrap up v1.0.2 (#682)
* update comfyui build

* update

* update

* update

* use zip

* add error control

* add log for debugging

* update

* add back 2.7, 2.8

* update

* update docs

* update

* update

* update

--- a/.github/workflows/build-comfyui-desktop.yaml
+++ b/.github/workflows/build-comfyui-desktop.yaml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.client_payload.ref || github.ref }}
+        if: success()
       - name: Show latest commit
         run: git log -1 --oneline
         shell: bash
@@ -25,10 +26,12 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+        if: success()
       - name: Setup Node.js 20.18.0
         uses: actions/setup-node@v4
         with:
           node-version: '20.18.0'
+        if: success()
       - name: Extract version from pyproject.toml
         id: get_version
         run: |
@@ -36,6 +39,7 @@ jobs:
           echo "version=$VERSION" >> $env:GITHUB_OUTPUT
           echo "Extracted ComfyUI-nunchaku version: $VERSION"
         shell: pwsh
+        if: success()
       - name: Get latest nunchaku release version
         id: get_nunchaku_version
         run: |
@@ -46,6 +50,7 @@ jobs:
         shell: pwsh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          if: success()
       - name: Run build script
         run: |
           cd ..
@@ -54,11 +59,12 @@ jobs:
         env:
           NUNCHAKU_VERSION: ${{ steps.get_nunchaku_version.outputs.nunchaku_version }}
           TORCH_VERSION: ${{ matrix.pytorch_version }}
+          if: success()
       - name: List build output
         run: |
           Get-ChildItem -Path "..\desktop\dist" -ErrorAction SilentlyContinue | Format-Table Name, Length, LastWriteTime
         shell: pwsh
-        if: always()
+        if: success()
       - name: Copy and rename artifacts
         run: |
           dir ..\desktop\dist
@@ -67,24 +73,28 @@ jobs:
             echo Renaming %%~nxf to ComfyUI-nunchaku-${{ steps.get_version.outputs.version }}-torch${{ matrix.pytorch_version }}-desktop-win.zip
             move "%%f" "artifacts\ComfyUI-nunchaku-${{ steps.get_version.outputs.version }}-torch${{ matrix.pytorch_version }}-desktop-win.zip"
           )
+          for %%f in (..\desktop\dist\*.exe) do (
+            echo Renaming %%~nxf to ComfyUI-nunchaku-${{ steps.get_version.outputs.version }}-torch${{ matrix.pytorch_version }}-desktop-win.exe
+            move "%%f" "artifacts\ComfyUI-nunchaku-${{ steps.get_version.outputs.version }}-torch${{ matrix.pytorch_version }}-desktop-win.exe"
+          )
           dir artifacts
         shell: cmd
         if: success()
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: comfyui-desktop-pytorch-${{ matrix.pytorch_version }}
+          name: ComfyUI-nunchaku-${{ steps.get_version.outputs.version }}-torch${{ matrix.pytorch_version }}-desktop-win.zip
           path: artifacts/*.zip
           retention-days: 7
         if: success()
-      # - name: Upload Artifact to Existing Release
-      #   uses: softprops/action-gh-release@v1
-      #   with:
-      #     tag_name: v${{ steps.get_version.outputs.version }}
-      #     files: artifacts/*.zip
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   if: success()
+      - name: Upload Artifact to Existing Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ steps.get_version.outputs.version }}
+          files: artifacts/*.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: success()
       - name: Clean up
         run: |
           cd ..
